@@ -1,3 +1,8 @@
+#Bind keys for exit (keys only work on empty lines
+bind_exit_key("Control-d")
+bind_exit_key("Control-z")
+
+
 #Commands for moving
 bind_key("Home",            "beginning_of_line")
 bind_key("End",             "end_of_line")
@@ -48,6 +53,11 @@ bind_key("Alt-v",           "ipython_paste")
 bind_key("Control-y",       "paste")
 bind_key("Control-z",       "undo")
 bind_key("Control-_",       "undo")
+
+#Unbinding keys:
+#un_bind_key("Home")
+
+
 
 #Other
 bell_style("none") #modes: none, audible, visible(not implemented)
